tests/paczka2/big_fuzzy/33778645.err
Error in line 14: A118 A775 -1,1
Error in line 6: A118 A775 46,6
Error in line 16: 4xqIoQ A775 36,5
Error in line 23: aF3PqsNd A118 -1,1
Error in line 27: tb5FCu A775 48,1
Error in line 22: yFT A43 124,4
Error in line 31: 4xqIoQ A118 79,6
Error in line 39: tb5FCu A118 13,6
Error in line 20: aF3PqsNd A118 88,6
Error in line 53: 1vrkes A118 76,6
Error in line 55: 1vrkes A775 95,0
Error in line 37: A118 A118 171,4
Error in line 49: 8xlWTOJeg A43 144,9
Error in line 83: 1vrkes A43 165,8
Error in line 93: 4xqIoQ A934 363,07
Error in line 98: yFT A775 15,2
Error in line 106: 4xqIoQ A934 22,6
Error in line 103: yFT A43 66,2
Error in line 122: yFT A118 76,80
Error in line 123: tb5FCu A775 41,1
Error in line 125: A118 A118 13,7
Error in line 132: yFT A43 1,5
Error in line 141: yFT A43 89,8
Error in line 159: aF3PqsNd A934 77,7
Error in line 164: 1vrkes A775 185,15
Error in line 177: 4xqIoQ A118 42,3
Error in line 161: 8xlWTOJeg A43 35,9
Error in line 195: eA43
Error in line 191: 4xqIoQ A934 225,2
Error in line 197: 1vrkes A118 9,4
Error in line 201: 1vrkes A775 -2,7
Error in line 192: A118 A118 3,4
Error in line 206: 4xqIoQ A118 3,6
Error in line 207: 4xqIoQ A934 19,4
Error in line 213: A118 A934 96,5
Error in line 205: yFT A43 26,3
Error in line 222: A118 A118 74,6
Error in line 216: 4xqIoQ A775 94,4
Error in line 228: 4xqIoQ A118 82,0
Error in line 199: 1vrkes A775 43,7
Error in line 237: 4xqIoQ A934 11,9
